open_agb_firm gba_db.bin Builder v2.0 and other changes
open_agb_firm gba_db.bin Builder:
* Updated to v2.0
* No-Intro DAT support
* Additional entry support
* Entries added/skipped are now output
* Other optimizations

Other changes:
* Remove most overrides in `open_agb_firm.c` to prepare for gba_db.bin
* Add `resources/gba.dat` entry to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ arm9/open_agb_firm9.bin
 arm11/open_agb_firm11.bin
 arm9/open_agb_firm9.elf
 arm11/open_agb_firm11.elf
+resources/gba.dat
 resources/gba.xml
 open_agb_firm.firm
 open_agb_firm*.7z
