--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 arm9/build/
 arm11/build/
 eclipse_project/
-open_agb_firm/
 *.sublime-project
 *.sublime-workspace
 arm9/open_agb_firm9.bin
@@ -10,4 +9,4 @@ arm9/open_agb_firm9.elf
 arm11/open_agb_firm11.elf
 tools/gba_db_builder/gba_db.bin
 open_agb_firm.firm
-open_agb_firm*.zip
+open_agb_firm*.7z
